# contact_graspnet_ros

./: CMakeLists.txt  README.md  package.xml
contact_graspnet/: ros_node.py  visualization_utils.py
docker/: Dockerfile  build.sh  docker_run.sh  docker_start.sh  package_apt.txt  requirement_pip.txt  ros_bashrc
msg/: GraspPose.msg
srv/: GraspGroup.srv
